refactor sqlc
